plot out formatting for home and begin others

--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -1,8 +1,10 @@
 .hero{
+    
 background-image:  url('../images/hero.jpg');
 min-height:500px;
 width:90%;
 margin:0 auto;
+margin-top:50px;
 
     &__content{
         text-align:center;
