--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,7 @@ h1 {
   min-height: 500px;
   width: 90%;
   margin: 0 auto;
+  margin-top: 50px;
 }
 .hero__content {
   text-align: center;
@@ -84,12 +85,71 @@ h1 {
   text-align: center;
 }
 
+footer {
+  height: 200px;
+  background-color: #50647c;
+}
+
 .footer {
-  height: 50px;
-  background-color: pink;
+  width: 90%;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 100px;
+}
+.footer__brands {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  min-width: 30%;
+  font-size: 30px;
+}
+.footer__brands a {
+  color: white;
+}
+.footer__contact {
+  min-width: 30%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: white;
+}
+.footer__contact p {
+  margin-bottom: 0px;
+}
+.footer__navigate {
+  min-width: 30%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+  color: white;
+}
+.footer__navigate a {
+  text-decoration: none;
+  color: white;
+}
+
+.amenities {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+.amenities__item {
+  height: 200px;
+  width: 200px;
+  background-color: red;
+}
+
+.amenities-title {
+  text-align: center;
   margin-top: 100px;
 }
 
