--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,9 +1,62 @@
-.footer{
 
-height:50px;
-background-color: pink;
+footer{
+    height:200px;
+    background-color:#50647c;
+}
+.footer{
+    
+width:90%;
+margin: 0 auto;
 display: flex;
 align-items: center;
 justify-content: space-evenly;
+
 margin-top:100px;
+
+
+&__brands{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    min-width:30%;
+    font-size: 30px;
+    
+    a{
+        color:white;
+    }
+}
+
+&__contact{
+    min-width:30%;
+   
+    display: flex;
+    align-items: center;
+    flex-direction:column;
+    justify-content: space-evenly;
+    color:white;
+
+    p{
+        margin-bottom:0px;
+    }
+}
+
+&__navigate{
+    min-width:30%;
+    margin-top:25px;
+    margin-bottom:25px;
+    display: flex;
+    align-items: center;
+    flex-direction:column;
+    justify-content: space-evenly;
+    color:white;
+
+    
+
+    a{
+        text-decoration: none;
+        color:white;
+    }
+    
+}
+
 }
