--- a/scss/amenities.scss
+++ b/scss/amenities.scss
@@ -12,6 +12,16 @@
         height:200px;
         width:200px;
         background-color:red;
+        color:white;
+        font-size: 30px;
+        text-align: center;
+        padding-top:50px;
+        padding-left: 10px;
+        padding-right: 10px;
+        border-width:1px;
+        border-radius:20px;
+
+
     }
 }
 
