--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -1,7 +1,7 @@
 
 footer{
     height:200px;
-    background-color:#50647c;
+    background-color:black;
 }
 .footer{
     
@@ -22,7 +22,14 @@ margin-top:100px;
     font-size: 30px;
     
     a{
-        color:white;
+        color:#50647c;
+        
+        text-decoration:none;
+
+        &:hover{
+            color:red;
+            
+        }
     }
 }
 
@@ -33,10 +40,11 @@ margin-top:100px;
     align-items: center;
     flex-direction:column;
     justify-content: space-evenly;
-    color:white;
+    color:#50647c;
 
     p{
         margin-bottom:0px;
+        padding-bottom:5px;
     }
 }
 
@@ -48,13 +56,20 @@ margin-top:100px;
     align-items: center;
     flex-direction:column;
     justify-content: space-evenly;
-    color:white;
+    color:#50647c;
 
     
 
     a{
-        text-decoration: none;
-        color:white;
+        color:#50647c;
+        
+        text-decoration:none;
+        padding-bottom:5px;
+
+        &:hover{
+            color:red;
+            
+        }
     }
     
 }
