--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,3 +5,6 @@
 @import 'footer.scss';
 @import 'amenities.scss';
 @import 'non-home-hero.scss';
+@import 'about.scss';
+@import 'our-team.scss';
+@import 'contact.scss';
