--- a/scss/about.scss
+++ b/scss/about.scss
@@ -7,14 +7,21 @@
     margin:0 auto;
     
     &__img{
-        background-image:url('../images/home-about-image.jpg');
+        background-image:url('../images/training-team.jpg');
         height:200px;
-        width:200px;
+        width:300px;
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
 
     &__content{
         max-width:30%;
         text-align:center;
+        h2{
+            font-size:40px;
+            margin-bottom:25px;
+        }
     }
 }
 
@@ -30,6 +37,24 @@
         max-width:40%;
         margin:0 auto;
 
+        h2{
+            font-size:40px;
+            padding:5px;
+            display:inline;
+            
+           
+        }
+
+        p{
+            margin-top:50px;
+        }
+
+        #home-gym{
+            color:red;
+        }  
+
+        
+
     }
 
 }
@@ -37,10 +62,14 @@
 .about-membership{
 
     max-width:90%;
+    margin: 0 auto;
     padding-top:150px;
+    text-align:center;
     h2{
         text-align:center;
-        padding-left:125px;
+        font-size:40px;
+             
+
     }
     
 
