--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -3,20 +3,27 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap:wrap;
     max-width:60%;
     margin: 0 auto;
     padding-top:100px;
-    padding-bottom:100px;
+    padding-bottom:50px;
    
     
 
     .contact-info-text{
 
-        max-width:40%;
+        max-width:50%;
     margin:0 auto;
     text-align:center;
     margin-top:100px;
-    margin-bottom:100px;
+    margin-bottom:50px;
+
+    h2{
+        font-size:40px;
+    }
+
+    
 
     }
 
@@ -38,6 +45,7 @@
         
         h2{
             text-align:center;
+            font-size:40px;
         }
 
         form{
@@ -64,9 +72,13 @@
         button{
             margin-top:20px;
             width:250px;
-            height:25px;
+            height:50px;
             border-width: 3px;
             border-radius: 5px;
+            font-size:20px;
+            border-color:#50647c;
+            background-color:#50647c;
+            color:white;
         }
 
         }
