--- a/scss/non-home-hero.scss
+++ b/scss/non-home-hero.scss
@@ -4,7 +4,8 @@
     width:90%;
     margin:0 auto;
     margin-top:50px;
-    background-color:#50647c;;
+    background-color:#50647c;
+    padding:20px;
     
     
         &__content{
