--- a/scss/our-team.scss
+++ b/scss/our-team.scss
@@ -11,15 +11,23 @@
     &__img{
 
 
-        background-image: url('../images/home-about-image.jpg');
-        width:200px;
+        background-image: url('../images/female-avatar.png');
+        width:300px;
         height:300px;
+        background-position: center;
+        background-size: cover;
 
     }
 
     &__text{
 
         max-width:40%;
+        text-align:center;
+
+        h2{
+            font-size: 40px;
+            margin-bottom:25px;
+        }
 
     }
 }
@@ -55,9 +63,11 @@
             margin-top:100px;
 
             &__img{
-                background-image: url('../images/home-about-image.jpg');
+                background-image: url('../images/avatar.jpg');
                 height:300px;
                 width:200px;
+                background-position: center;
+                background-size: cover;
             }
 
             &__name{
