change PNG to png

--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,7 @@ footer {
   font-size: 40px;
 }
 .contact-info__map {
-  background-image: url("../images/map.png");
+  background-image: url("../images/map.PNG");
   height: 350px;
   width: 350px;
   background-position: center;
