--- a/scss/contact.scss
+++ b/scss/contact.scss
@@ -28,7 +28,7 @@
     }
 
     &__map{
-        background-image: url('../images/map.png');
+        background-image: url('../images/map.PNG');
         height:350px;
         width:350px;
         background-position: center;
